--- a/mercadopagoApi/Modules/Payment/Payment.storyboard
+++ b/mercadopagoApi/Modules/Payment/Payment.storyboard
@@ -18,26 +18,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RI8-Kf-eh7">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="64" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RI8-Kf-eh7">
+                                <rect key="frame" x="0.0" y="52" width="375" height="583"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="paymentCell" textLabel="HDl-8Q-sXw" style="IBUITableViewCellStyleDefault" id="lxC-vX-VAA">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="paymentCell" rowHeight="72" id="lxC-vX-VAA" customClass="PaymentTableViewCell" customModule="mercadopagoApi" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lxC-vX-VAA" id="fyp-ih-gZp">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="71.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HDl-8Q-sXw">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mR2-z0-OTA">
+                                                    <rect key="frame" x="16" y="4" width="343" height="63.5"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="FdW-kE-hTs">
+                                                            <rect key="frame" x="16" y="8" width="311" height="47.5"/>
+                                                            <subviews>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="LKF-st-wu9">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="87" height="47.5"/>
+                                                                    <subviews>
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="52Y-0v-ePy">
+                                                                            <rect key="frame" x="0.0" y="14.5" width="29" height="19"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" constant="29" id="484-Ho-UCB"/>
+                                                                                <constraint firstAttribute="width" secondItem="52Y-0v-ePy" secondAttribute="height" multiplier="29:19" id="Asr-jA-rU0"/>
+                                                                            </constraints>
+                                                                        </imageView>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYm-kT-MMc">
+                                                                            <rect key="frame" x="45" y="13.5" width="42" height="20.5"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
+                                                                </stackView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MWw-wd-LBx">
+                                                                    <rect key="frame" x="269" y="0.0" width="42" height="47.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="FdW-kE-hTs" firstAttribute="leading" secondItem="mR2-z0-OTA" secondAttribute="leading" constant="16" id="9Qr-XZ-eQf"/>
+                                                        <constraint firstAttribute="trailing" secondItem="FdW-kE-hTs" secondAttribute="trailing" constant="16" id="SvZ-n4-6Cu"/>
+                                                        <constraint firstAttribute="bottom" secondItem="FdW-kE-hTs" secondAttribute="bottom" constant="8" id="hAX-Zd-i4q"/>
+                                                        <constraint firstItem="FdW-kE-hTs" firstAttribute="top" secondItem="mR2-z0-OTA" secondAttribute="top" constant="8" id="ohN-Eb-IuB"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="mR2-z0-OTA" firstAttribute="leading" secondItem="fyp-ih-gZp" secondAttribute="leading" constant="16" id="22L-95-P7i"/>
+                                                <constraint firstAttribute="bottom" secondItem="mR2-z0-OTA" secondAttribute="bottom" constant="4" id="9Am-e9-Nuq"/>
+                                                <constraint firstAttribute="trailing" secondItem="mR2-z0-OTA" secondAttribute="trailing" constant="16" id="GmP-pU-yNT"/>
+                                                <constraint firstItem="mR2-z0-OTA" firstAttribute="top" secondItem="fyp-ih-gZp" secondAttribute="top" constant="4" id="j4x-9W-G7B"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="borderView" destination="mR2-z0-OTA" id="ugW-pJ-8DG"/>
+                                            <outlet property="paymentImageView" destination="52Y-0v-ePy" id="Ugi-tR-v75"/>
+                                            <outlet property="paymentNameLabel" destination="cYm-kT-MMc" id="1jf-SG-tLJ"/>
+                                            <outlet property="paymentStatusLabel" destination="MWw-wd-LBx" id="BsK-NL-ABE"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -47,8 +93,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="RI8-Kf-eh7" firstAttribute="top" secondItem="76L-2L-g1p" secondAttribute="top" id="32a-bm-pWR"/>
-                            <constraint firstItem="76L-2L-g1p" firstAttribute="bottom" secondItem="RI8-Kf-eh7" secondAttribute="bottom" id="6lc-GX-0zU"/>
+                            <constraint firstItem="RI8-Kf-eh7" firstAttribute="top" secondItem="76L-2L-g1p" secondAttribute="top" constant="32" id="32a-bm-pWR"/>
+                            <constraint firstItem="76L-2L-g1p" firstAttribute="bottom" secondItem="RI8-Kf-eh7" secondAttribute="bottom" constant="32" id="6lc-GX-0zU"/>
                             <constraint firstItem="ypl-WW-qi4" firstAttribute="centerY" secondItem="RI8-Kf-eh7" secondAttribute="centerY" id="7mY-yt-yos"/>
                             <constraint firstItem="ypl-WW-qi4" firstAttribute="centerX" secondItem="RI8-Kf-eh7" secondAttribute="centerX" id="Ogl-0m-Mgu"/>
                             <constraint firstItem="76L-2L-g1p" firstAttribute="trailing" secondItem="RI8-Kf-eh7" secondAttribute="trailing" id="Q0M-WT-kik"/>
